--- a/client/package.json
+++ b/client/package.json
@@ -9,22 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
+    "@ant-design/icons": "^5.4.0",
+    "@ant-design/icons-react-native": "^2.3.2",
+    "@expo/metro-runtime": "^3.2.3",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
-    "axios": "^1.7.2",
-    "expo": "~51.0.20",
+    "axios": "^1.3.1",
+    "expo": "^51.0.28",
+    "expo-linear-gradient": "~13.0.2",
     "expo-secure-store": "^13.0.2",
+    "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-svg": "^15.4.0",
+    "react-icons": "^5.2.1",
+    "react-native": "^0.74.5",
+    "react-native-animate-number": "^0.1.2",
+    "react-native-animated-numbers": "^0.6.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-pie-chart": "^3.0.2",
+    "react-native-svg": "^15.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.79",
+    "expo-module-scripts": "^3.5.2",
     "sharp-cli": "^5.0.0",
     "typescript": "~5.3.3"
   },
